<resources>
    <string name="app_name">Galaxy Information Screen</string>
    <string name="galaxy_name">Galaxy Name:</string>
    <string name="galaxy_solar">Galaxy Solar Systems:</string>
    <string name="galaxy_habit">Galaxy Habitable Planets:</string>
    <string name="galaxy_colony">Galaxy Colonies:</string>
    <string name="galaxy_pop">Galaxy Population:</string>
    <string name="galaxy_fleet">Galaxy Starship Fleets:</string>
    <string name="galaxy_ships">Galaxy Active Starships:</string>
    <string name="hello_world">Hello World</string>
    <string name="name_data">My Galaxy</string>
    <string name="solar_data">0</string>
    <string name="habit_data">0</string>
    <string name="colony_data">0</string>
    <string name="pop_data">0</string>
    <string name="fleet_data">0</string>
    <string name="ships_data">0</string>
</resources>
