<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/outerpace"
    android:layout_height="match_parent"
    tools:context="com.caci.hellouniverse.MainActivity">

    <LinearLayout android:orientation="vertical" android:layout_margin="12dip"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:background="#000000" >

        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_name" android:textColor="@color/textColor"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_solar" android:textColor="@color/textColor"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_habit" android:textColor="@color/textColor"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_colony" android:textColor="@color/textColor"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_pop" android:textColor="@color/textColor"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_fleet" android:textColor="@color/textColor"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/galaxy_ships" android:textColor="@color/textColor"/>
    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_margin="12dip"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:background="#000000" >
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/name_data" android:textColor="@color/textColor" android:id="@+id/name" />
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/solar_data" android:textColor="@color/textColor" android:id="@+id/solar"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/habit_data" android:textColor="@color/textColor" android:id="@+id/habit"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/colony_data" android:textColor="@color/textColor" android:id="@+id/colony"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/pop_data" android:textColor="@color/textColor" android:id="@+id/pop"/>
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/fleet_data" android:textColor="@color/textColor" android:id="@+id/fleet" />
        <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="italic"
                   android:text="@string/ships_data" android:textColor="@color/textColor" android:id="@+id/ships" />
    </LinearLayout>
</LinearLayout>
